--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,8 @@
     <modules>
         <module>uni-commons</module>
         <module>uni-sys</module>
+        <module>uni-mall</module>
+        <module>uni-total</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -234,12 +236,7 @@
     </dependencies>
 
     <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
+
     </build>
 
 </project>
